--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,14 @@
   --sidebar-ring: oklch(0.48 0.027 264.364);
 }
 
+@layer utilities{
+  .gradient{
+    @apply bg-gradient-to-br from-gray-500 to-white
+  }
+  .gradient-title{
+    @apply gradient text-transparent bg-clip-text
+  }
+}
 @layer base {
   * {
     @apply border-border outline-ring/50;
