--- a/src/index.css
+++ b/src/index.css
@@ -124,11 +124,9 @@
 }
 
 @layer utilities{
-  .gradient{
-    @apply bg-gradient-to-br from-gray-500 to-white
-  }
+  
   .gradient-title{
-    @apply gradient text-transparent bg-clip-text
+    @apply  @apply bg-gradient-to-br from-gray-500 to-white text-transparent bg-clip-text
   }
 }
 @layer base {
